--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,6 +64,17 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 
+ 	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>acoes.root</param-value>
+	</context-param>
+ 
+	<!-- Log4j configuration -->
+	<context-param>
+	    <param-name>log4jConfigLocation</param-name>
+	    <param-value>/WEB-INF/classes/log4j.properties</param-value>
+	</context-param>
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
@@ -80,18 +91,8 @@
 
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-	 </listener>
+	</listener>
  
- 	<context-param>
-		<param-name>webAppRootKey</param-name>
-		<param-value>springapp.root</param-value>
-	</context-param>
- 
-	<!-- Log4j configuration -->
-	<context-param>
-	    <param-name>log4jConfigLocation</param-name>
-	    <param-value>/WEB-INF/classes/log4j.properties</param-value>
-	</context-param>    
 	<listener>
 	    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
