--- a/.openshift/config/logging.properties
+++ b/.openshift/config/logging.properties
@@ -62,3 +62,6 @@ org.apache.catalina.core.ContainerBase.[Catalina].[localhost].[/host-manager].ha
 
 # To see debug messages in TldLocationsCache, uncomment the following line:
 #org.apache.jasper.compiler.TldLocationsCache.level = FINE
+
+org.apache.catalina.core.ContainerBase.[Catalina].level = INFO
+org.apache.catalina.core.ContainerBase.[Catalina].handlers = java.util.logging.ConsoleHandler
