--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,11 @@
 		<param-value>acoes.root</param-value>
 	</context-param>
  
+ 	<context-param>
+ 		<param-name>log4jExposeWebAppRoot</param-name>
+ 		<param-value>false</param-value>
+	</context-param>
+ 
 	<!-- Log4j configuration -->
 	<context-param>
 	    <param-name>log4jConfigLocation</param-name>
