--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,7 +77,7 @@
 	<!-- Log4j configuration -->
 	<context-param>
 	    <param-name>log4jConfigLocation</param-name>
-	    <param-value>/WEB-INF/classes/log4j.properties</param-value>
+	    <param-value>classpath:log4j.properties</param-value>
 	</context-param>
 
 	<context-param>
