--- a/.classpath
+++ b/.classpath
@@ -16,7 +16,7 @@
 	<classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/primefaces/themes/all-themes/1.0.10/all-themes-1.0.10.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/highfaces/highfaces/1.0/highfaces-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/highfaces/highfaces/1.1/highfaces-1.1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/json/json/20090211/json-20090211.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-api/2.2.6/jsf-api-2.2.6.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/sun/faces/jsf-impl/2.2.6/jsf-impl-2.2.6.jar"/>
@@ -55,5 +55,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/poi/poi-ooxml-schemas/3.11-beta2/poi-ooxml-schemas-3.11-beta2.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/xmlbeans/xmlbeans/2.6.0/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="var" path="M2_REPO/stax/stax-api/1.0.1/stax-api-1.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/itextpdf/itextpdf/5.5.9/itextpdf-5.5.9.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
