--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "path_to_submodule"] 
-  path = path_to_submodule 
-  url = git://https://github.com/dogaum/acoes/
+[submodule "acoes"] 
+  path = acoes 
+  url = https://github.com/dogaum/acoes/
