--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,13 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.9</version>
 		</dependency>
+
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.5</version>
+		</dependency>
+
 	</dependencies>
 	<profiles>
 		<profile>
@@ -267,6 +274,18 @@
 							<warName>ROOT</warName>
 						</configuration>
 					</plugin>
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-dependency-plugin</artifactId>
+		                <version>3.0.1</version>
+		                <executions>
+		                    <execution>
+		                        <id>copy-dependencies</id>
+		                        <phase>package</phase>
+		                        <goals><goal>copy-dependencies</goal></goals>
+		                    </execution>
+		                </executions>
+		            </plugin>
 				</plugins>
 			</build>
 		</profile>
