--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=INFO,Stdout,ROLLING
 log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.Stdout.layout.conversionPattern=%-5p - %-c - %m\n
+log4j.appender.Stdout.layout.conversionPattern=[%d] [%-5p] [%-30.30C{1}] %x - %m %n
 
 log4j.logger.org.springframework.web.context=INFO , Stdout
 
@@ -12,6 +12,6 @@ org.apache.catalina.core.ContainerBase.[Catalina].handlers = org.apache.log4j.Co
 log4j.appender.ROLLING=org.apache.log4j.RollingFileAppender
 log4j.appender.ROLLING.File=${catalina.base}/logs/acoes.log
 log4j.appender.ROLLING.layout=org.apache.log4j.PatternLayout
-log4j.appender.ROLLING.layout.ConversionPattern=%d{ISO8601} %-5p %c{1}-%m%n
+log4j.appender.ROLLING.layout.ConversionPattern=[%d] [%-5p] [%-30.30C{1}] %x - %m %n
 log4j.appender.ROLLING.MaxFileSize=10MB
 log4j.appender.ROLLING.MaxBackupIndex=5
