--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
-log4j.rootLogger=INFO,Stdout,ROLLING
+log4j.rootLogger=INFO,ROLLING
 log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.Stdout.layout.conversionPattern=[%d] [%-5p] [%-30.30C{1}] %x - %m %n
 
-log4j.logger.org.springframework.web.context=INFO , Stdout
+log4j.logger.org.springframework.web.context=INFO,ROLLING
 
 org.apache.catalina.core.ContainerBase.[Catalina].level = INFO
 org.apache.catalina.core.ContainerBase.[Catalina].handlers = org.apache.log4j.ConsoleAppender
