--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,7 @@
 log4j.rootLogger=INFO,ROLLING
+
+log4j.application.level=INFO, ROLLING
+
 log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.Stdout.layout.conversionPattern=[%d] [%-5p] [%-30.30C{1}] %x - %m %n
@@ -9,9 +12,10 @@ org.apache.catalina.core.ContainerBase.[Catalina].level = INFO
 org.apache.catalina.core.ContainerBase.[Catalina].handlers = org.apache.log4j.ConsoleAppender
 
 # ROLLING
+log4j.category.br.com.dabage=DEBUG, ROLLING
 log4j.appender.ROLLING=org.apache.log4j.RollingFileAppender
 log4j.appender.ROLLING.File=${catalina.base}/logs/acoes.log
 log4j.appender.ROLLING.layout=org.apache.log4j.PatternLayout
-log4j.appender.ROLLING.layout.ConversionPattern=[%d] [%-5p] [%-30.30C{1}] %x - %m %n
+log4j.appender.ROLLING.layout.ConversionPattern = [%d] [%-5p] [%-30.30C{1}] %x - %m %n
 log4j.appender.ROLLING.MaxFileSize=10MB
 log4j.appender.ROLLING.MaxBackupIndex=5
