## Bugs and improves

--- a/src/main/filters/filter-dev.properties
+++ b/src/main/filters/filter-dev.properties
@@ -1,4 +1,5 @@
-OPENSHIFT_MONGODB_DB_HOST=127.0.0.1
-OPENSHIFT_MONGODB_DB_PORT=27017
-OPENSHIFT_MONGODB_DB_USER=
-OPENSHIFT_MONGODB_DB_PASSWORD=
+MONGODB.DB.HOST=127.0.0.1
+MONGODB.DB.PORT=27017
+MONGODB.DB.CREDENTIALS=admin:1AITjmHDZC2U@admin
+MONGODB.DB.REPLICA.SET=127.0.0.1:27017
+MONGODB.DB.SSL=false
