--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<properties>
+		<env>dev</env>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -252,48 +253,12 @@
 	</dependencies>
 	<profiles>
 		<profile>
-			<!-- When built in OpenShift the 'openshift' profile will be used when 
-				invoking mvn. -->
-			<!-- Use this profile for any OpenShift specific customization your app 
-				will need. -->
-			<!-- By default that is to put the resulting archive into the 'webapps' 
-				folder. -->
-			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-			<id>openshift</id>
-			<build>
-				<finalName>acoes</finalName>
-				<filters>
-					<filter>src/main/filters/filter-openshift.properties</filter>
-				</filters>
-				<plugins>
-					<plugin>
-						<artifactId>maven-war-plugin</artifactId>
-						<version>2.1.1</version>
-						<configuration>
-							<outputDirectory>webapps</outputDirectory>
-							<warName>ROOT</warName>
-						</configuration>
-					</plugin>
-		            <plugin>
-		                <groupId>org.apache.maven.plugins</groupId>
-		                <artifactId>maven-dependency-plugin</artifactId>
-		                <version>3.0.1</version>
-		                <executions>
-		                    <execution>
-		                        <id>copy-dependencies</id>
-		                        <phase>package</phase>
-		                        <goals><goal>copy-dependencies</goal></goals>
-		                    </execution>
-		                </executions>
-		            </plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
 			<id>dev</id>
+			<properties>
+				<env>dev</env>
+			</properties>
 			<build>
-				<finalName>acoes</finalName>
+				<finalName>ROOT</finalName>
 				<filters>
 					<filter>src/main/filters/filter-dev.properties</filter>
 				</filters>
@@ -309,5 +274,64 @@
 				</plugins>
 			</build>
 		</profile>
+
+		<profile>
+			<id>prod</id>
+			<properties>
+				<env>prod</env>
+			</properties>
+			<build>
+				<finalName>ROOT</finalName>
+				<filters>
+					<filter>src/main/filters/filter-prod.properties</filter>
+				</filters>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.1.1</version>
+						<configuration>
+							<outputDirectory>C:/dev/apache-tomcat-8.5.13/webapps</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
+	<build>
+		<finalName>ROOT</finalName>
+
+		<filters>
+			<filter>${basedir}/src/main/filters/filter-${env}.properties</filter>
+		</filters>
+
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/resources-filtered</directory>
+				<targetPath>../${project.build.finalName}/WEB-INF</targetPath>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
